# X_post_recommendation_mvp

./: .gitignore  README.md  __init__.py  config.py  constants.py  database.py  main.py  models.py  pyproject.toml  schemas.py  vercel.json
fixtures/: crypto_expanded_accounts_2026-03-08.json  crypto_expanded_snapshot_2026-03-08.json  crypto_kol_accounts_2026-03-08.json  crypto_kol_snapshot_2026-03-08.json  crypto_public_snapshot_2026-03-08.json  crypto_signal_accounts_2026-03-08.json  sample_ai_builders.json  solana_public_profile_2026-03-08.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
scripts/: __init__.py  import_fixture.py  public_profile_to_fixture.py  run_fixture_pipeline.py  seed_audience.py  seed_weekly_ingest.py
services/: __init__.py  clustering.py  fixture_ingestion.py  ingestion.py  recommendations.py  text.py  x_api.py
web/: index.html
web/assets/: app.js  styles.css
